syntax = "proto3";

package greeter;

service GreeterService {
   rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message =1;
}